src/zookeeper/zookeeper.cpp
@@ -117,8 +117,9 @@ public:
       //   (1) Empty / invalid 'host' string format.
       //   (2) Any getaddrinfo error other than EAI_NONAME,
       //       EAI_NODATA, and EAI_MEMORY are mapped to EINVAL.
+      // The errors EAI_NONAME and EAI_NODATA are mapped to ENOENT.
       // Either way, retrying is not problematic.
-      if (zh == nullptr && errno == EINVAL) {
+      if (zh == nullptr && (errno == EINVAL || errno == ENOENT)) {
         ErrnoError error("zookeeper_init failed");
         LOG(WARNING) << error.message << " ; retrying in 1 second";
         os::sleep(Seconds(1));
